--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,8 @@
     <title>Dashboard</title>
   </head>
   <body style="box-sizing: border-box; margin: 0; padding: 0;">
-    <div id="root"></div>
+    <div id="root">
+      
+    </div>
   </body>
 </html>
